@@ -188,6 +188,7 @@
 <!ENTITY def-i-l "<link linkend='def-i-l'><function>I18N:DEFINTERNATIONAL</function></link>">
 <!ENTITY defloc "<link linkend='defloc'><function>I18N:DEFLOCALIZED</function></link>">
 <!ENTITY localized "<link linkend='localized'><function>I18N:LOCALIZED</function></link>">
+<!ENTITY locale-conv "<link linkend='locale-conv'><function>I18N:LOCALE-CONV</function></link>">
 <!ENTITY set-locale "<link linkend='set-locale'><function>I18N:SET-LOCALE</function></link>">
 <!ENTITY lang-info "<link linkend='lang-info'><function>I18N:LANGUAGE-INFORMATION</function></link>">
 <!ENTITY def-file-enc "<olink targetdoc='impnotes' targetptr='def-file-enc'><varname>CUSTOM:*DEFAULT-FILE-ENCODING*</varname></olink>">
